--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import 'foundation/colors.scss';
+
 .App {
   text-align: center;
 }
@@ -8,10 +10,10 @@
 }
 
 .App-header {
-  background-color: #9b59b6;
+  background-color: $brand;
   height: 150px;
   padding: 20px;
-  color: white;
+  color: $background;
 }
 
 .App-intro {
