--- a/src/App.scss
+++ b/src/App.scss
@@ -4,19 +4,19 @@
   text-align: center;
 }
 
-.App-logo {
+.AppLogo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
 
-.App-header {
+.AppHeader {
   background-color: $brand;
   height: 150px;
   padding: 20px;
   color: $background;
 }
 
-.App-intro {
+.AppIntro {
   font-size: large;
 }
 
