--- a/src/pages/ProxySheet/components/MagicCard.scss
+++ b/src/pages/ProxySheet/components/MagicCard.scss
@@ -1,3 +1,5 @@
+@import '../../../foundation/print';
+
 $card-padding: .1cm;
 $red: #e74c3c;
 $blue: #3498db;
@@ -10,10 +12,18 @@ $colorless: #7f8c8d;
 .CardSheet {
   display: flex;
   flex-wrap: wrap;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0 auto;
+  @include print-styles {
+    padding: none;
+  }
 }
 
 .Card {
-  font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
   width: 6.3cm;
   height: 8.8cm;
   border: 4px solid $colorless;
@@ -55,13 +65,6 @@ $colorless: #7f8c8d;
   border: 1px solid gray;
 }
 
-.Art {
-  border: 1px solid gray;
-  padding: $card-padding;
-  margin: $card-padding;
-  height: 2.2cm;
-}
-
 .Typeline {
   border: 1px solid gray;
   padding: $card-padding;
@@ -69,11 +72,12 @@ $colorless: #7f8c8d;
 }
 
 .Text {
+  flex: 1 1 auto;
   border: 1px solid gray;
   padding: $card-padding;
   margin: $card-padding;
-  height: 3.5cm;
-  font-size: 10px;
+  white-space: pre-wrap;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .Footer {
