--- a/src/foundation/colors.scss
+++ b/src/foundation/colors.scss
@@ -1,3 +1,12 @@
 $brand: #9b59b6;
 $light: #ecf0f1;
+$gray: #ddd;
 $footer: #2c3e50;
+
+$red: #e74c3c;
+$blue: #3498db;
+$green: #2ecc71;
+$white: #f1c40f;
+$black: #8e44ad;
+$gold: #a67e22;
+$colorless: #7f8c8d;
