--- a/src/pages/ProxySheet/components/MagicCard.scss
+++ b/src/pages/ProxySheet/components/MagicCard.scss
@@ -1,13 +1,7 @@
 @import '../../../foundation/print';
+@import '../../../foundation/colors';
 
 $card-padding: .1cm;
-$red: #e74c3c;
-$blue: #3498db;
-$green: #2ecc71;
-$white: #f1c40f;
-$black: #8e44ad;
-$gold: #a67e22;
-$colorless: #7f8c8d;
 
 .CardSheet {
   display: flex;
